--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.5
 django-crispy-forms==1.9.0
 django-summernote==0.8.11.4
+django-widget-tweaks==1.4.8
 pkg-resources==0.0.0
 pytz==2020.1
 sqlparse==0.3.1
